# vlc

contrib/native/: config.mak  toolchain.cmake
contrib/native/a52dec/: configure.in
contrib/native/a52dec/liba52/: imdct.c
contrib/native/aribb24/: configure.ac
contrib/native/aribb24/src/: aribb24.pc.in
contrib/native/ebml/ebml/: Debug.h  EbmlConfig.h  EbmlContexts.h  EbmlEndian.h  EbmlHead.h  EbmlId.h  EbmlMaster.h  EbmlSubHead.h  EbmlTypes.h  EbmlVoid.h  IOCallback.h  MemIOCallback.h  StdIOCallback.h
contrib/native/ebml/src/: Debug.cpp  EbmlContexts.cpp  EbmlCrc32.cpp  EbmlDate.cpp  EbmlHead.cpp  EbmlSubHead.cpp  EbmlVersion.cpp  EbmlVoid.cpp  IOCallback.cpp  MemIOCallback.cpp  StdIOCallback.cpp
contrib/native/faad2/: libtool.orig
contrib/native/faad2/aacDECdrop/: decode.c
contrib/native/faad2/frontend/: audio.c  audio.h  main.c
contrib/native/faad2/include/: faad.h  neaacdec.h
contrib/native/faad2/libfaad/: analysis.h  bits.c  bits.h  cfft.c  cfft.h  cfft_tab.h  common.c  common.h  decoder.c  drc.c  drc.h  drm_dec.c  drm_dec.h  error.c  error.h  filtbank.c  filtbank.h  fixed.h  hcr.c  huffman.c  huffman.h  ic_predict.c  ic_predict.h  iq_table.h  is.c  is.h  kbd_win.h  lt_predict.c  lt_predict.h  mdct.c  mdct.h  mdct_tab.h  mp4.c  mp4.h  ms.c  ms.h  output.c  output.h  pns.c  pns.h  (+45 more)
contrib/native/game-music-emu/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  install_manifest.txt
contrib/native/game-music-emu/demo/: cmake_install.cmake
contrib/native/game-music-emu/gme/: CMakeLists.txt  cmake_install.cmake
contrib/native/game-music-emu/player/: cmake_install.cmake
contrib/native/gcrypt/: Makefile.am  configure.ac
contrib/native/gcrypt/doc/: fips-fsm.eps  gcrypt.info  hmac256.1  libgcrypt-modules.eps  version.texi  yat2m
contrib/native/gcrypt/src/: dumpsexp  gcrypt.h  hmac256  libgcrypt-config  mpicalc  versioninfo.rc
contrib/native/goom/src/: convolve_fx.c  filters.c  flying_stars_fx.c  plugin_info.c  tentacle3d.c
contrib/native/libarchive/libarchive/: archive_entry.c  archive_read_disk_posix.c
contrib/native/libgpg-error/: VERSION  libgpg-error.spec
contrib/native/libgpg-error/doc/: gpg-error-config.1  version.texi  yat2m
contrib/native/libgpg-error/po/: cs.po  da.po  de.po  eo.po  fr.po  hu.po  it.po  ja.po  libgpg-error.pot  nl.po  pl.po  pt.po  ro.po  ru.po  sr.po  sv.po  uk.po  vi.po  zh_CN.po  zh_TW.po
contrib/native/libgpg-error/src/: Makefile.am  estream.c  gen-posix-lock-obj  gpg-error-config  gpg-error.def  gpg-error.w32-manifest  mkerrcodes  mkheader  versioninfo.rc
contrib/native/libgpg-error/tests/: t-lock.c
contrib/native/libmatroska/: libmatroska.pc.in
contrib/native/libmatroska/matroska/: FileKax.h  KaxAttached.h  KaxAttachments.h  KaxBlock.h  KaxBlockData.h  KaxCluster.h  KaxClusterData.h  KaxConfig.h  KaxContentEncoding.h  KaxCues.h  KaxCuesData.h  KaxInfo.h  KaxSegment.h  KaxTags.h  KaxTrackAudio.h  KaxTrackEntryData.h  KaxTracks.h  KaxTypes.h  KaxVersion.h
contrib/native/libmatroska/src/: KaxAttached.cpp  KaxAttachments.cpp  KaxBlock.cpp  KaxBlockData.cpp  KaxCluster.cpp  KaxContexts.cpp  KaxCues.cpp  KaxCuesData.cpp  KaxSeekHead.cpp  KaxSegment.cpp  KaxTracks.cpp  KaxVersion.cpp
contrib/native/libtiger/: INSTALL  Makefile.am  README  THANKS  configure.ac  configure.ac.orig
contrib/native/libtiger/doc/: Makefile.am  index.html  tiger-main.doc  tiger-performance.doc  tiger.doxygen  tiger.doxygen.in
contrib/native/libtiger/doc/html/: Performance.html  annotated.html  classes.html  config_8h-source.html  examples.html  files.html  globals.html  globals_defs.html  globals_func.html  group__init.html  group__renderer.html  group__version.html  index.html  modules.html  pages.html  simple.c-example.html  simple_8c-example.html  structtiger__bitmap.html  structtiger__bitmap__cache__prime__item.html  structtiger__bitmap__cache__prime__queue.html  structtiger__bitmap__cache__primer.html  structtiger__png__reader__state.html  tiger_8h-source.html  tiger_8h.html  tiger__config_8h-source.html
contrib/native/libtiger/examples/src/: simple.c
contrib/native/libtiger/include/tiger/: tiger.h  tiger.h.in  tiger_config.h
contrib/native/libtiger/misc/pkgconfig/: tiger-uninstalled.pc.in  tiger.pc.in
contrib/native/libtiger/src/: tiger.c  tiger_bitmap.c  tiger_bitmap_cache.c  tiger_debug.c  tiger_draw.c  tiger_internal.h  tiger_item.c  tiger_mutex.h  tiger_pixel_format.c  tiger_rectangle.c  tiger_renderer.c  tiger_thread.h  tiger_util.c
contrib/native/live555/: Makefile.head  config.aix  config.alpha  config.armeb-uclibc  config.armlinux  config.avr32-linux  config.bfin-linux-uclibc  config.bfin-uclinux  config.bsplinux  config.cris-axis-linux-gnu  config.cygwin  config.cygwin-for-vlc  config.freebsd  config.iphone-simulator  config.iphoneos  config.irix  config.linux  config.linux-64bit  config.linux-gdb  config.linux-with-shared-libraries  config.linux.orig  config.linux.orig.orig  config.macosx  config.macosx-32bit.orig  config.macosx-before-version-10.4.orig  config.mingw  config.openbsd  config.qnx4  config.solaris-32bit  config.solaris-32bit.orig  config.solaris-64bit  config.solaris-64bit.orig  config.sunos  config.uClinux
contrib/native/live555/UsageEnvironment/: Makefile.head
contrib/native/live555/groupsock/: Makefile.head
contrib/native/live555/liveMedia/: Makefile.head  RTSPClient.cpp
contrib/native/microdns/doc/: Doxyfile
contrib/native/mpg123/: libmpg123.pc.in
contrib/native/musepack/: CMakeCache.txt  CMakeLists.txt.orig  cmake_install.cmake  install_manifest.txt
contrib/native/mysofa/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  cmake_install.cmake  install_manifest.txt
contrib/native/nfs/: configure.ac
contrib/native/png/: Makefile.am  configure.ac  libpng.pc.in  libpng16-config  pngpriv.h  timepng
contrib/native/sidplay-libs/: Makefile.am
contrib/native/spatialaudio/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  cmake_install.cmake  install_manifest.txt
contrib/native/upnp/: autoconfig.h  autoconfig.h.in
(+57 files in other folders)
